--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ ext {
     coroutinesVersion = '1.4.1'
     dexMakerVersion = '2.12.1'
     espressoVersion = '3.2.0-beta01'
-    fragmentVersion = '1.1.0-alpha07'
+    fragmentVersion = '1.3.1'
     fragmentKtxVersion = '1.3.1'
     hamcrestVersion = '1.3'
     junitVersion = '4.13.2'
